pfe-app/pfe_back_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pfeback1-deployment
  namespace: pfe1
  labels:
    app: pfeback1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pfeback1
  template:
    metadata:
      labels:
        app: pfeback1
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: pfeback1
          image: ameggaoulou/app:v1
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 200Mi  
            limits:
              cpu: 150m  
              memory: 250Mi
