pfe-app/pfe_front_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pfefront1-deployment
  namespace: pfe1
  labels:
    app: pfefront1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pfefront1
  template:
    metadata:
      labels:
        app: pfefront1
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: pfefront1
          image: ameggaoulou/app:v3
          ports:
            - containerPort: 443
          resources:
            requests:
              cpu: 100m
              memory: 200Mi  
            limits:
              cpu: 150m  
              memory: 250Mi
