pfe-app/pfe_back_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pfeback1-service
  namespace: pfe1
spec:
  selector:
    app: pfeback1  
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 80  
  type: ClusterIP
