pfe-app/pfe_front_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pfefront1-service
  namespace: pfe1
spec:
  selector:
    app: pfefront1
  ports:
    - protocol: TCP
      port: 443  
      targetPort: 443  
  type: ClusterIP
